--- a/index.html
+++ b/index.html
@@ -12,22 +12,34 @@
             <div class="left">Header Logo</div>
             <div class="right">
                 <ul>
-                    <li>header link one</li>
-                    <li>header link two</li>
-                    <li>header link three</li>
+                    <li><a href="https://google.com">header link one</a></li>
+                    <li><a href="https://google.com">header link two</a></li>
+                    <li><a href="https://google.com">header link three</a></li>
                 </ul>
             </div>
         </div>
-        <div class="hero-text">
-            <p class="hero-main-text">This website is awesome</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde officiis dolor neque ex eveniet ea repudiandae pariatur debitis voluptate, maxime expedita molestias quam, deleniti non tempora, praesentium necessitatibus quo consequatur!</p>
-            <button>Sign up</button>
+        <div class="hero-content">
+            <div class="hero-text">
+                <p class="main-text">This website is awesome</p>
+                <p class="secondary-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde officiis dolor neque ex eveniet ea repudiandae pariatur debitis voluptate, maxime expedita molestias quam, deleniti non tempora, praesentium necessitatibus quo consequatur!</p>
+                <button>Sign up</button>
+            </div>
+            <img src="images/enha.jpg" alt="Just a very meaningful image." class="header-image">
         </div>
-        <img src="images/your-name.jpeg" alt="Just a very meaningful image." class="header-image">
-
     </div>
-    <div class="images">
-
+    
+    <div class="white-background">
+        <p class="header">Some random information.</p>
+        <div class="images">
+            <img src="images/_ (1).jpeg" alt="enha-1" class="image">
+            <p class="image subtext">This is ENHYPEN.</p>
+            <img src="images/_ (2).jpeg" alt="enha-2" class="image">
+            <p class="image subtext">This is ENHYPEN.</p>
+            <img src="images/_ (3).jpeg" alt="enha-3" class="image">
+            <p class="image subtext">This is ENHYPEN.</p>
+            <img src="images/ENHYPEN Christmas group photo 2023.jpeg" alt="enha-4" class="image">
+            <p class="image subtext">This is ENHYPEN.</p>
+        </div>
 
     </div>
     <div class="god-of-thunder">
