finalized the white background part

--- a/index.html
+++ b/index.html
@@ -31,14 +31,22 @@
     <div class="white-background">
         <p class="header">Some random information.</p>
         <div class="images">
-            <img src="images/_ (1).jpeg" alt="enha-1" class="image">
-            <p class="image subtext">This is ENHYPEN.</p>
-            <img src="images/_ (2).jpeg" alt="enha-2" class="image">
-            <p class="image subtext">This is ENHYPEN.</p>
-            <img src="images/_ (3).jpeg" alt="enha-3" class="image">
-            <p class="image subtext">This is ENHYPEN.</p>
-            <img src="images/ENHYPEN Christmas group photo 2023.jpeg" alt="enha-4" class="image">
-            <p class="image subtext">This is ENHYPEN.</p>
+            <div class="image">
+                <img src="images/_ (1).jpeg" alt="enha-1">
+                <p>This is ENHYPEN.</p>
+            </div>
+            <div class="image">
+                <img src="images/_ (2).jpeg" alt="enha-2">
+                <p>This is ENHYPEN.</p>
+            </div>
+            <div class="image">
+                <img src="images/_ (3).jpeg" alt="enha-3">
+                <p>This is ENHYPEN.</p>
+            </div>
+            <div class="image">
+                <img src="images/ENHYPEN Christmas group photo 2023.jpeg" alt="enha-4">
+                <p>This is ENHYPEN.</p>
+            </div>
         </div>
 
     </div>
