coder before properly fixing call for action

--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
         </div>
 
     </div>
-    <div class="god-of-thunder">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius maxime fugiat obcaecati eveniet impedit optio reiciendis id iure quo cumque sapiente aliquam quaerat, perspiciatis odio enim aspernatur cupiditate! Ullam, minus!
+    <div class="comment-section">
+        <p class="comment">ipsum dolor sit amet consectetur adipisicing elit. Eius maxime fugiat obcaecati eveniet impedit optio reiciendis id iure quo cumque sapiente aliquam quaerat, perspiciatis odio enim aspernatur cupiditate! Ullam, minus!</p>
+        <p class="commenter">-Thor, God of Thunder</p>
     </div>
     <div class="call">
         <div>Call to action! It's time!</div>
