--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@
         <p class="commenter">-Thor, God of Thunder</p>
     </div>
     <div class="call">
-        <div>Call to action! It's time!</div>
-        <div>Sign up for our product by clicking the buttor right over there!</div>
+        <div class="text">
+            <p class="bigger">Call to action! It's time!</p>
+            <p class="smaller">Sign up for our product by clicking the buttor right over there!</p>
+        </div>
         <button>Sign up</button>
     </div>
     <div class="footer black-background">
