--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="call">
         <div class="text">
             <p class="bigger">Call to action! It's time!</p>
-            <p class="smaller">Sign up for our product by clicking the buttor right over there!</p>
+            <p class="smaller">Sign up for our product by clicking the button right over there!</p>
         </div>
         <button>Sign up</button>
     </div>
